iptables
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Nov 22 12:57:52 2024
*mangle
:PREROUTING ACCEPT [1860:1445163]
:INPUT ACCEPT [1860:1445163]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1184:170732]
:POSTROUTING ACCEPT [829:134841]
COMMIT
# Completed on Fri Nov 22 12:57:52 2024
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Nov 22 12:57:52 2024
*raw
:PREROUTING ACCEPT [1860:1445163]
:OUTPUT ACCEPT [1184:170732]
COMMIT
# Completed on Fri Nov 22 12:57:52 2024
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Nov 22 12:57:52 2024
*filter
:INPUT DROP [899:227795]
:FORWARD DROP [0:0]
:OUTPUT DROP [355:35891]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -d 192.168.1.1/32 -j ACCEPT
-A OUTPUT -d 216.58.209.14/32 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
COMMIT
# Completed on Fri Nov 22 12:57:52 2024
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Nov 22 12:57:52 2024
*nat
:PREROUTING ACCEPT [890:227507]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [500:45252]
:POSTROUTING ACCEPT [145:9361]
COMMIT
# Completed on Fri Nov 22 12:57:52 2024
